namespaces/live.cloud-platform.service.justice.gov.uk/operations-engineering-flask-runner-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "operations-engineering-flask-runner-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "operations-engineering"
    cloud-platform.justice.gov.uk/application: "Application template for Operations Engineering"
    cloud-platform.justice.gov.uk/owner: "operations-engineering: operations-engineering@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/operations-engineering-flask-runner-dev"
    cloud-platform.justice.gov.uk/team-name: "operations-engineering"
    cloud-platform.justice.gov.uk/review-after: ""
